--- a/README
+++ b/README
@@ -87,6 +87,14 @@ SESSION UTILITIES
     will determine. If this parameter is not specified, it will default to
     the currently active session. Returns a boolean.
 
+  get_session_parent
+        my $parent = $api->get_session_parent($session);
+        my $parent = $api->get_session_parent();
+
+    Get the parent for a given session. Takes one optional parameter, a
+    POE::Session object. If this parameter is not provided, the method
+    defaults to the currently active session. Returns a POE::Session object.
+
   resolve_session_to_ref
       my $session = $api->resolve_session_to_ref($session_id);
       my $session = $api->resolve_session_to_ref();
@@ -324,10 +332,11 @@ SIGNAL UTILITIES
     to the currently active session. Returns a boolean.
 
 AUTHOR
-    Matt Cashner (sungo@pobox.com)
+    Matt Cashner (sungo@pobox.com) Yuvol Kogman (nothingmuch@woobling.org)
 
 LICENSE
-    Copyright (c) 2003 - 2008, Matt Cashner. All rights reserved.
+    Copyright (c) 2003 - 2008, Matt Cashner. Copyright (c) 2008, Yuvol
+    Kogman
 
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are
