--- a/README
+++ b/README
@@ -331,12 +331,13 @@ SIGNAL UTILITIES
     POE::Session object. If this parameter is not provided, it will default
     to the currently active session. Returns a boolean.
 
-AUTHOR
-    Matt Cashner (sungo@pobox.com) Yuvol Kogman (nothingmuch@woobling.org)
+AUTHORS
+    Matt Cashner (sungo@pobox.com)
+    Yuvol Kogman (nothingmuch@woobling.org)
 
 LICENSE
-    Copyright (c) 2003 - 2008, Matt Cashner. Copyright (c) 2008, Yuvol
-    Kogman
+    Copyright (c) 2003 - 2008, Matt Cashner.
+    Copyright (c) 2008, Yuval Kogman
 
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are
