--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 NAME
     POE::API::Peek - Peek into the internals of a running POE environment
 
+VERSION
+    version 2.16_1
+
 DESCRIPTION
     POE::API::Peek extends the POE::Kernel interface to provide clean access
     to Kernel internals in a cross-version compatible manner. Other
@@ -188,6 +191,23 @@ ALIAS UTILITIES
     default to the currently active session. Returns a string.
 
 EVENT UTILITIES
+  BREAKAGE ALERT
+    POE v1.289 introduced a dual event queue system. All non-alarm events
+    are no longer put on the normal event queue but kept in a lexical queue
+    deep inside of POE.
+
+    The dual queue means that, while POE::API::Peek can access the event
+    queue, only alarms will be found there. For most normal purposes, the
+    event utilities in POE::API::Peek are useless for POE versions 1.289 or
+    greater.
+
+    If POE::API::Peek is used under one of these broken POEs, it will emit a
+    warning (via Carp) the first time an event utility is used. You will
+    see:
+
+    "POE v1.289 and above have a broken dual event queue that renders the
+    event API in POE::API::Peek mostly useless. at your_code.pl line 15"
+
   event_count_to
       my $count = $api->event_count_to($session);
       my $count = $api->event_count_to();
@@ -332,37 +352,12 @@ SIGNAL UTILITIES
     to the currently active session. Returns a boolean.
 
 AUTHORS
-    Matt Cashner (sungo@pobox.com)
-    Yuvol Kogman (nothingmuch@woobling.org)
+    sungo <sungo@sungo.us> Yuval Kogman <nothingmuch@woobling.org>
 
-LICENSE
-    Copyright (c) 2003 - 2008, Matt Cashner.
-    Copyright (c) 2008, Yuval Kogman
+COPYRIGHT AND LICENSE
+    This software is Copyright (c) 2010 by Matt Cashner (sungo).
 
-    Redistribution and use in source and binary forms, with or without
-    modification, are permitted provided that the following conditions are
-    met:
+    This is free software, licensed under:
 
-    *   Redistributions of source code must retain the above copyright
-        notice, this list of conditions and the following disclaimer.
-
-    *   Redistributions in binary form must reproduce the above copyright
-        notice, this list of conditions and the following disclaimer in the
-        documentation and/or other materials provided with the distribution.
-
-    *   Neither the name of Matt Cashner nor the names of its contributors
-        may be used to endorse or promote products derived from this
-        software without specific prior written permission.
-
-    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
-    IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
-    TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
-    PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER
-    OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-    EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-    PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-    PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-    LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-    NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+      The (three-clause) BSD License
 
