Import of SUNGO/POE-API-Peek-2.16 from CPAN.
gitpan-cpan-distribution: POE-API-Peek
gitpan-cpan-version:      2.16
gitpan-cpan-path:         SUNGO/POE-API-Peek-2.16.tar.gz
gitpan-cpan-author:       SUNGO
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     POE::API::Peek - Peek into the internals of a running POE environment
 
 VERSION
-    version 2.16_2
+    version 2.16
 
 DESCRIPTION
     POE::API::Peek extends the POE::Kernel interface to provide clean access
