--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     POE::API::Peek - Peek into the internals of a running POE environment
 
 VERSION
-    version 2.18
+    version 2.19
 
 DESCRIPTION
     POE::API::Peek extends the POE::Kernel interface to provide clean access
@@ -305,6 +305,7 @@ FILEHANDLE UTILITIES
     optional parameter, a POE::Session object or ID. If this parameter is
     not supplied, it will default to the currently active session.
 
+PID UTILITIES
   session_pid_count
         my $count = $api->session_pid_count($session_id);
         my $count = $api->session_pid_count($session);
