--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     POE::API::Peek - Peek into the internals of a running POE environment
 
 VERSION
-    version 2.19
+    version 2.20
 
 DESCRIPTION
     POE::API::Peek extends the POE::Kernel interface to provide clean access
@@ -315,6 +315,10 @@ PID UTILITIES
     optional parameter, a POE::Session object or ID. If this parameter is
     not supplied, it will default to the currently active session.
 
+    Since 1.350 of POE it is no longer possible to query the number of
+    processes a session is watching. This method is deprecated and will be
+    removed in a future version.
+
 SIGNAL UTILITIES
     POTENTIAL BREAKAGE NOTE: In POE v1.293 (in particular: svn rev 2916)
     changed the structure of signals. Previously, the data portion of a
@@ -377,7 +381,7 @@ AUTHORS
     'BinGOs' Williams <bingos@cpan.org> Philip Gwyn <gwyn@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is Copyright (c) 2011 by Matt Cashner (sungo).
+    This software is Copyright (c) 2012 by Matt Cashner (sungo).
 
     This is free software, licensed under:
 
